Fix files view scrollbar

--- a/styles/remote-edit.less
+++ b/styles/remote-edit.less
@@ -75,13 +75,13 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  width: 100%;
   overflow: auto;
 }
 
 .remote-edit-tree-view .list-tree {
   flex-grow: 1;
   flex-shrink: 0;
+  isolation: isolate;
   min-width: -webkit-min-content;
   min-height: 100%;
   padding-left: @component-icon-padding;
